# ProjectBackup

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: buildtest.yml  rust.yml
src/: cli.rs  client.rs  encryption.rs  main.rs  server.rs
tests/: integration_test.rs  mock_stream.rs
