[package]
name = "project_backup"
version = "0.1.0"
authors = ["Johan Nicander <mr.johannicander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.10"
rayon = "1.5"
anyhow = "1.0" # Error pretty-printing
home = "0.5" # Locating user home
structopt = "0.3" # Defining comandline arguments
aes-gcm = "0.9.4"
rand_chacha = "0.3.1"
rand_core = "0.6.3"